# spl-compiler

./: README.md  backup  desktop.ini  eco32tools.tgz  index.html  parser  skeleton.tgz  tests.tgz
eco32tools/: compile.sh  output.asm  run.sh  run.sh.save  test1.spl
skeleton/: output.asm  output2.asm  submit.sh
skeleton/.submitscript/data/: config.json
skeleton/.submitscript/data/assignments/Aufgabe-2/submissions/[evaluated] 07443b81-fe7b-4a34-88a0-383db482ce41/: submission.json  submission_response.json  upload.tgz
skeleton/.submitscript/src/: main.sh
skeleton/.submitscript/src/submitscript/: submit.py
skeleton/.submitscript/src/submitscript/api/: api.py
skeleton/.submitscript/src/submitscript/data/: assignment.py  submission.py
skeleton/c/: CMakeLists.txt  README(C).txt
skeleton/c/src/: main.c
skeleton/c/src/absyn/: absyn.c  absyn.h
skeleton/c/src/phases/_01_scanner/: scanner.flex  scanner.h
skeleton/c/src/phases/_02_03_parser/: parser.y
skeleton/c/src/phases/_04a_tablebuild/: tablebuild.c
skeleton/c/src/phases/_04b_semant/: procedurebodycheck.c  procedurebodycheck.h
skeleton/c/src/phases/_05_varalloc/: varalloc.c  varalloc.h
skeleton/c/src/phases/_06_codegen/: codegen.c  codegen.h  codeprint.c
skeleton/c/src/table/: identifier.c  identifier.h  table.c  table.h
skeleton/c/src/types/: types.c  types.h
skeleton/c/src/util/: errors.c  errors.h  memory.c  memory.h
skeleton/java/: .project  pom.xml
tests/runtime_tests/: bigtest.spl  mytest.spl  mytest2.spl  test1.s  test1.x  test3.spl
(+86 files in other folders)
